--- a/vignettes/biblioVignette.bib
+++ b/vignettes/biblioVignette.bib
@@ -1,5 +1,27 @@
-% This file was created with JabRef 2.7.2.
+% This file was created with JabRef 2.9.2.
 % Encoding: Cp1252
+
+@ARTICLE{abrahamowicz2012statmed,
+  author = {Abrahamowicz, M. and Beauchamp, M. E. and Sylvestre, M. P.},
+  title = {{Comparison of alternative models for linking drug exposure with
+	adverse effects}},
+  journal = {Statistics in Medicine},
+  year = {2012},
+  volume = {31},
+  pages = {1014--1030},
+  number = {11-12}
+}
+
+@ARTICLE{abrahamowicz2007statmed,
+  author = {Abrahamowicz, M. and MacKenzie, T. A.},
+  title = {{Joint estimation of time-dependent and non-linear effects of continuous
+	covariates on survival}},
+  journal = {Statistics in Medicine},
+  year = {2007},
+  volume = {26},
+  pages = {392--408},
+  number = {2}
+}
 
 @ARTICLE{almon1965,
   author = {Almon, S.},
@@ -35,6 +57,18 @@
   number = {5}
 }
 
+@ARTICLE{berhane2008statmed,
+  author = {Berhane, K. and Hauptmann, M. and Langholz, B.},
+  title = {{Using tensor product splines in modeling exposure-time-response
+	relationships: Application to the Colorado Plateau Uranium Miners
+	cohort}},
+  journal = {Statistics in Medicine},
+  year = {2008},
+  volume = {27},
+  pages = {5484--5496},
+  number = {26}
+}
+
 @ARTICLE{braga2001epi,
   author = {Braga, A. L. and Zanobetti, A. and Schwartz, J.},
   title = {{The time course of weather-related deaths}},
@@ -54,6 +88,15 @@
   volume = {84},
   pages = {58-62},
   number = {1}
+}
+
+@ARTICLE{gasparrini2013statmed,
+  author = {Gasparrini, A.},
+  title = {{Modeling exposure-lag-response associations with distributed lag
+	non-linear models}},
+  journal = {Statistics in Medicine},
+  year = {2013},
+  number = {accepted for publication}
 }
 
 @ARTICLE{gasparrini2011jss,
@@ -99,6 +142,29 @@
   number = {5}
 }
 
+@ARTICLE{hauptmann2000biom,
+  author = {Hauptmann, M. and Wellmann, J. and Lubin, J. H. and Rosenberg, P.
+	S. and Kreienbrock, L.},
+  title = {{Analysis of exposure-time-response relationships using a spline
+	weight function}},
+  journal = {Biometrics},
+  year = {2000},
+  volume = {56},
+  pages = {1105--1108},
+  number = {4}
+}
+
+@ARTICLE{langholz1999ajim,
+  author = {Langholz, B. and Thomas, D. and Xiang, A. and Stram, D.},
+  title = {{Latency analysis in epidemiologic studies of occupational exposures:
+	application to the Colorado Plateau uranium miners cohort}},
+  journal = {American Journal of Industrial Medicine},
+  year = {1999},
+  volume = {35},
+  pages = {246--256},
+  number = {3}
+}
+
 @ARTICLE{pattenden2003,
   author = {Pattenden, S. and Nikiforov, B. and Armstrong, B. G.},
   title = {{Mortality and temperature in Sofia and London}},
@@ -107,6 +173,16 @@
   volume = {57},
   pages = {628-33},
   number = {8}
+}
+
+@ARTICLE{richardson2009epidemiol,
+  author = {Richardson, D. B.},
+  title = {{Latency models for analyses of protracted exposures}},
+  journal = {Epidemiology},
+  year = {2009},
+  volume = {20},
+  pages = {395--399},
+  number = {3}
 }
 
 @TECHREPORT{samet2000a,
@@ -158,6 +234,48 @@
   volume = {15},
   pages = {755-61},
   number = {6}
+}
+
+@ARTICLE{sylvestre2009statmed,
+  author = {Sylvestre, M. P. and Abrahamowicz, M.},
+  title = {{Flexible modeling of the cumulative effects of time-dependent exposures
+	on the hazard}},
+  journal = {Statistics in Medicine},
+  year = {2009},
+  volume = {28},
+  pages = {3437--3453},
+  number = {27}
+}
+
+@ARTICLE{thomas1988arph,
+  author = {Thomas, D. C.},
+  title = {{Models for exposure-time-response relationships with applications
+	to cancer epidemiology}},
+  journal = {Annual Review of Public Health},
+  year = {1988},
+  volume = {9},
+  pages = {451--482}
+}
+
+@ARTICLE{thomas1983sjweh,
+  author = {Thomas, D. C.},
+  title = {{Statistical methods for analyzing effects of temporal patterns of
+	exposure on cancer risks}},
+  journal = {Scandinavian Journal of Work, Environment \& Health},
+  year = {1983},
+  volume = {9},
+  pages = {353--366},
+  number = {4}
+}
+
+@ARTICLE{vacek1997statmed,
+  author = {Vacek, P. M.},
+  title = {{Assessing the effect of intensity when exposure varies over time}},
+  journal = {Statistics in Medicine},
+  year = {1997},
+  volume = {16},
+  pages = {505--513},
+  number = {5}
 }
 
 @ARTICLE{welty2005,
