--- a/vignettes/biblioVignette.bib
+++ b/vignettes/biblioVignette.bib
@@ -96,7 +96,7 @@
 	non-linear models}},
   journal = {Statistics in Medicine},
   year = {2013},
-  number = {accepted for publication}
+  number = {Epub ahead of print. DOI: 10.1002/sim.5963}
 }
 
 @ARTICLE{gasparrini2011jss,
